# pluginpoc

./: CMakeLists.txt  Plugin.h  library.cpp  library.h  main.cpp
